@@ -9,6 +9,7 @@ QXmpp 0.6.4 (UNRELEASED)
   - Fix XEP-0115 verification strings (remove duplicate features, sort form values)
   - Fix issues:
     * Issue 144: QXmppBookmarkConference autojoin parsing
+  - Remove deprecated QXmppRosterManager::rosterChanged().
 
 QXmpp 0.6.3 (Jul 24, 2012)
 --------------------------
